<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">
    <!-- Layout for the editor -->
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="@dimen/activity_margin"
    tools:context=".EditorActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <!-- Label -->
        <TextView
            android:text="@string/category_colour"
            android:textColor="@color/colorPrimaryDark"
            style="@style/CategoryStyle" />

        <!-- Input fields -->
        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:orientation="vertical"
            android:paddingLeft="4dp">

            <!-- Colour drop-down spinner -->
            <Spinner
                android:id="@+id/edit_spinner_colour"
                android:layout_width="wrap_content"
                android:layout_height="48dp"
                android:paddingRight="16dp"
                android:spinnerMode="dropdown" />
        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical">

    <!-- Measurement category -->
    <LinearLayout
        android:id="@+id/container_price1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <!-- Label -->
        <TextView
            android:id="@+id/textView2"
            android:layout_width="105dp"
            android:textColor="@color/colorPrimaryDark"
            style="@style/CategoryStyle"
            android:text="@string/category_price" />
        <TextView
            android:id="@+id/label_pound_unit"
            android:layout_width="25dp"
            android:text="@string/unit_paint_price"
            style="@style/EditorUnitsStyle"/>
          <!-- Weight field -->
         <EditText
                    android:id="@+id/edit_paint_price"
                    android:layout_width="200dp"
                    android:hint="@string/hint_paint_price"
                    android:padding="8dp"
                    android:inputType="number"
                    style="@style/EditorFieldStyle" />


            </LinearLayout>
        </LinearLayout>

    <LinearLayout
        android:id="@+id/container_measurement2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:paddingBottom="60dp">

        <!-- Label -->
        <TextView
            style="@style/CategoryStyle"
            android:layout_width="15dp"
            android:text="Quantity"
            android:textColor="@color/colorPrimaryDark" />

        <!-- Input fields -->
        <RelativeLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:paddingLeft="0dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:weightSum="1">
            <!-- Weight field -->
            <Button
                android:id="@+id/dec_Stock"
                android:layout_width="48dp"
                android:layout_height="48dp"
                android:onClick="decrement"
                android:text="-" />

            <EditText
                android:id="@+id/quantity_text_view"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingBottom="8sp"
                android:paddingLeft="8sp"
                android:paddingRight="8sp"
                android:paddingTop="8sp"
                android:text="0"
                android:textColor="#000000"
                android:textSize="16sp" />

            <Button
                android:id="@+id/inc_Stock"
                android:layout_width="48dp"
                android:layout_height="48dp"
                android:layout_weight="0.01"
                android:onClick="increment"
                android:text="+" />
            </LinearLayout>

        </RelativeLayout>
    </LinearLayout>

    <TextView
        android:id="@+id/supplier_header"
        android:layout_width="match_parent"
        style="@style/HeaderStyle"
        android:text="@string/supplier_header" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#E3F2FD"
        android:orientation="vertical">

        <!-- Measurement category -->
        <LinearLayout
            android:id="@+id/container_supplier"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <!-- Label -->
            <TextView
                android:id="@+id/textViewName"
                style="@style/CategoryStyle"
                android:layout_width="match_parent"
                android:text="@string/category_sup_name"
                android:textColor="@color/darkBlue" />

            <!-- Supplier Name field -->
            <EditText
                android:id="@+id/editViewName"
                style="@style/EditorFieldStyle"
                android:layout_width="match_parent"
                android:hint="@string/hint_supplier_name"
                android:inputType="textCapSentences" />

            <!-- Label -->
            <TextView
                android:id="@+id/textViewPhone"
                style="@style/CategoryStyle"
                android:layout_width="match_parent"
                android:text="@string/category_sup_phone"
                android:textColor="@color/darkBlue" />

            <!-- Supplier Phone field -->
            <EditText
                android:id="@+id/editViewPhone"
                style="@style/EditorFieldStyle"
                android:layout_width="match_parent"
                android:hint="@string/hint_supplier_phone"
                android:inputType="phone" />
<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:paddingRight="12dp">
            <!-- Label -->
            <TextView
                android:id="@+id/textViewMail"
                style="@style/CategoryStyle"
                android:layout_width="100dp"
                android:text="@string/category_sup_email"
                android:textColor="@color/darkBlue" />
            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Order"
                android:onClick="submitOrder"
                />
        </LinearLayout>
            <!-- Supplier Mail field -->
            <EditText
                android:id="@+id/editViewMail"
                style="@style/EditorFieldStyle"
                android:layout_width="match_parent"
                android:hint="@string/hint_supplier_mail"
                android:inputType="textWebEmailAddress" />
        </LinearLayout>
    </LinearLayout>
</LinearLayout>
    </ScrollView>